# longan-nano-rust-playground

./: Cargo.toml  openocd.gdb
src/: main.rs
