[package]
name = "myhelloworld2"
version = "0.1.0"
authors = ["Hauke Mehrtens <hauke@hauke-m.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
longan-nano = "0.1.1"
gd32vf103xx-hal = "0.2.3"
panic-halt = "0.2.0"
riscv-rt = "0.8.0"

# this lets you use `cargo fix`!
[[bin]]
name = "myhelloworld2"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
