[package]
name = "longan-nano-rust-playground"
version = "0.1.0"
authors = ["Hauke Mehrtens <hauke@hauke-m.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.*"
longan-nano = { git = "https://github.com/riscv-rust/longan-nano.git", branch = "master", features = ["lcd"] }
gd32vf103xx-hal = "0.3.*"
panic-halt = "0.2.*"
riscv = "0.5.*"
riscv-rt = "0.7.*"
embedded-graphics = "0.6.*"

# this lets you use `cargo fix`!
[[bin]]
name = "longan-nano-rust-playground"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
